# gait_analysis

./: .gitignore  README.md  Rapport.docx  brouillon.ipynb  config.py  pyproject.toml  ~$apport.docx
data/: Hugo01.c3d  Hugo_marche_chaussure_7.c3d  Hugo_marche_chaussure_9.c3d
data/healthy/: Hugo02.c3d  Hugo05.c3d
reports/: Figure_1.pptx  Figure_2.pptx  Figure_4.pptx
scripts/: brouillon.py  cinematique.py  functions.py  gait_analysis.py  kinematics.py  kinetics.py  main.py
