[project]
name = "gait-analysis"
version = "0.1.0"
author = "Hugo HAFFAD"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "moveck-bridge-btk>=2025.3.2",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pathlib>=1.0.1",
    "pingouin>=0.5.5",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
    "spm1d>=0.4.53",
]
